--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<section>
+    <div class="jumbotron">
+        <h1 class="display-4">Bienvenidos!</h1>
+        <p class="lead"> APP de personajes de Disney</p>
+        <hr class="my-4">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil corrupti earum atque vero fugiat id ea et obcaecati aspernatur, distinctio velit quidem odio libero ipsam ut quo soluta aliquid. Nemo.</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    </div>
+</section>
