agregamos la pagina de personajes

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -6,11 +6,8 @@
   
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="#" routerLink="/home" routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" routerLink="/personajes" routerLinkActive="active">Personajes</a>
+        <li class="nav-item active" *ngFor="let ruta of rutas">
+            <a class="nav-link" href="#" routerLink="{{ ruta.url }}" routerLinkActive="active">{{ ruta.nombre }} <span class="sr-only">(current)</span></a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
