--- a/src/app/personajes/personajes.component.html
+++ b/src/app/personajes/personajes.component.html
@@ -1,1 +1,3 @@
-<p>personajes works!</p>
+<section>
+    <app-horizontal-card *ngFor="let personaje of personajes" [personaje]="personaje"></app-horizontal-card>
+</section>
