terminando el sprint

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<section>
+  <div class="jumbotron">
+      <h1 class="display-4">Bienvenidos!</h1>
+      <p class="lead"> APP de personajes de Disney</p>
+      <hr class="my-4">
+      <a class="btn btn-primary btn-lg" href="#" routerLink="/personajes"  routerLinkActive="active" role="button">Ver Personajes</a>
+  </div>
+</section>
