--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">DISNEY APP</a>
+    <a class="navbar-brand" href="/home">DISNEY APP</a>
   
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -11,6 +11,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" routerLink="/personajes" routerLinkActive="active">Personajes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" routerLink="/about-us" routerLinkActive="active">About-us</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
