--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -3,7 +3,7 @@ footer {
   background-color: black;
   color: white;
   position: absolute;
-  bottom: 0;
+  bottom: -50px;
   width: 100%;
   height: 40px;
 }
