--- a/src/app/shared/horizontal-card/horizontal-card.component.html
+++ b/src/app/shared/horizontal-card/horizontal-card.component.html
@@ -1,7 +1,7 @@
 <div class="card mb-3" style="max-width: 540px;">
     <div class="row no-gutters">
         <div class="col-md-4">
-        <img src="assets/img/{{ personaje.foto }}" class="card-img" alt="{{ personaje.nombre }}">
+        <img src="assets/img/{{ personaje.foto }}" class="card-img align-middle" alt="{{ personaje.nombre }}">
         </div>
         <div class="col-md-8">
         <div class="card-body">
@@ -9,6 +9,7 @@
             <p class="card-text">{{ personaje.biografia }}</p>
             <p class="card-text"><small class="text-muted">Cantidad de peliculas: {{ personaje.cantidadPeliculas }}</small></p>
             <p class="card-text"><small class="text-muted">Solo en peliculas animadas: {{ personaje.soloPeliculaAnimada }}</small></p>
+            <button class="btn btn-primary" routerLink="/mr-increible" routerLinkActive="active">Mas infromacion</button>
         </div>
         </div>
     </div>
