tarea lista, aunque no con el resultado que esperaba

--- a/src/app/show-personaje/show-personaje.component.html
+++ b/src/app/show-personaje/show-personaje.component.html
@@ -4,7 +4,7 @@
         <img
           src="../../../assets/img/{{ personaje.foto }}"
           class="d-block w-100"
-          alt="mr.increible"
+          alt="{{ personaje.nombre }}"
         />
       </div>
     </div>
