--- a/src/app/personajes/personajes.component.html
+++ b/src/app/personajes/personajes.component.html
@@ -1,3 +1,3 @@
-<section>
+<section class="grid-container">
   <app-horizontal-card *ngFor="let personaje of personajes" [personaje]="personaje"></app-horizontal-card>
 </section>
