--- a/src/app/shared/horizontal-card/horizontal-card.component.html
+++ b/src/app/shared/horizontal-card/horizontal-card.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-3" style="max-width: 540px;">
+<div class="card mb-3 shadow" style="max-width: 540px;">
     <div class="row no-gutters">
         <div class="col-md-4">
         <img src="assets/img/{{ personaje.foto }}" class="card-img align-middle" alt="{{ personaje.nombre }}">
